test: ensure Java 17 compatibility by replacing getFirst() with get(0)